--- a/lefthook.yml
+++ b/lefthook.yml
@@ -18,7 +18,7 @@
      format:
        tags: frontend style
        glob: "*.{js,ts,jsx,tsx,json,css,scss,md}"
-       run: prettier --write {staged_files}
+       run: npm run prettier -- --write {staged_files}
        stage_fixed: true
 #     eslint:
 #       glob: "*.{js,ts,jsx,tsx}"
